# The-Fifth-Season

./: README.md  README_EN.md  main.py  pyproject.toml  test_api.py  test_app.py  test_emotion_fix.py
config/: settings.py
src/: __init__.py
src/emotion_analyzer/: __init__.py  analyzer.py  visualizer.py
src/story_generator/: __init__.py  generator.py
src/ui/: __init__.py  main_app.py
src/utils/: __init__.py  helpers.py
