[project]
name = "the-fifth-season"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jieba>=0.42.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "streamlit>=1.47.0",
    "textblob>=0.19.0",
    "urllib3>=2.5.0",
    "wordcloud>=1.9.4",
]
